# muterm-framework

./: .gitignore  LICENSE  README  muterm-framework.cabal
Framework/: Problem.hs  Processor.hs  Proof.hs
MuTerm/Framework/: DotRep.hs  GraphViz.hs  Output.hs  Ppr.hs  Problem.hs  Processor.hs  Proof.hs  Strategy.hs
MuTerm/Framework/Problem/: Types.hs
