name:		muterm-framework
version: 	1.1.1
cabal-version:	>= 1.2
description: 	A framework for building DP framework-based solvers
license: 	AllRightsReserved
license-file: 	LICENSE
copyright:
author:		Jose Iborra, Raul Gutierrez
maintainer: 	rgutierrez@dsic.upv.es
build-type: 	Simple
stability:
homepage:	http://zenon.dsic.upv.es/muterm/
package-url:
synopsis:
category:
tested-with:	

Library
  exposed-modules:
    MuTerm.Framework.Problem,
    MuTerm.Framework.Processor,
    MuTerm.Framework.Proof,
    MuTerm.Framework.Strategy,
    MuTerm.Framework.DotRep,
    MuTerm.Framework.Output,
    MuTerm.Framework.GraphViz

  build-depends: 	base -any, control-monad-free -any, containers, prettyclass, xhtml, derive, fgl, graphviz == 2999.1.0.2, dotgen == 0.3.1
  ghc-options:   	-O2 -threaded 
