name:		muterm-framework
version: 	1.3.1
cabal-version:	>= 1.6
description: 	A framework for building DP framework-based solvers
license: 	AllRightsReserved
license-file: 	LICENSE
copyright:
author:		Jose Iborra, Raul Gutierrez
maintainer: 	rgutierrez@dsic.upv.es
build-type: 	Simple
stability:
homepage:	http://zenon.dsic.upv.es/muterm/
package-url:
synopsis:
category:
tested-with:	
source-repository head
  type:     git
  location: git://github.com/pepeiborra/muterm-framework.git

Flag graphs
  default: False

Library
  exposed-modules:
    MuTerm.Framework.Problem,
    MuTerm.Framework.Problem.Types,
    MuTerm.Framework.Processor,
    MuTerm.Framework.Proof,
    MuTerm.Framework.Strategy,
    MuTerm.Framework.Output

  build-depends: base -any,
                 control-monad-free >= 0.4,
                 containers,
                 deepseq,
                 parallel > 2,
                 prettyclass,
                 xhtml,
                 fgl
  if flag(graphs) 
    exposed-modules:
      MuTerm.Framework.DotRep,
      MuTerm.Framework.GraphViz
    build-depends:
                 graphviz == 2999.1.0.2,
                 dotgen == 0.3.1

  if impl(ghc > 6.12)
     Extensions: DeriveFunctor, DeriveFoldable, DeriveTraversable, StandaloneDeriving
     cpp-options: -DGHC612
  else
     Extensions: TemplateHaskell
     build-depends: derive > 2
     cpp-options: -DDERIVE
