name:		muterm-framework
version: 	1.6.2.1
cabal-version:	>= 1.6
description: 	A framework for building DP framework-based solvers
license: 	AllRightsReserved
license-file: 	LICENSE
copyright:
author:		Jose Iborra, Raul Gutierrez
maintainer: 	rgutierrez@dsic.upv.es
build-type: 	Simple
stability:
homepage:	http://zenon.dsic.upv.es/muterm/
package-url:
synopsis:
category:
tested-with:	
source-repository head
  type:     git
  location: git://github.com/pepeiborra/muterm-framework.git

Library
  exposed-modules:
    MuTerm.Framework.Problem,
    MuTerm.Framework.Problem.Types,
    MuTerm.Framework.Processor,
    MuTerm.Framework.Proof,
    MuTerm.Framework.Strategy,
    MuTerm.Framework.Output

  build-depends: base -any,
                 control-monad-free >= 0.4,
                 control-monad-free-extras,
                 containers,
                 deepseq,
                 mtl,
                 parallel > 2,
                 prettyclass,
                 xhtml,
                 tag-bits,
                 suitable,
                 hoed-mini,
                 hoed-extras,
                 prelude-extras

  if impl(ghc > 6.12)
     Extensions: DeriveFunctor, DeriveFoldable, DeriveTraversable, StandaloneDeriving, ConstraintKinds
     cpp-options: -DGHC612
  else
     Extensions: TemplateHaskell
     build-depends: derive > 2
     cpp-options: -DDERIVE
  ghc-prof-options: -fprof-auto